signin page alignment corrected.

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ position: relative;
 span{
     color: #fff;
     position: absolute;
-    top:10px;
+    top:-50px;
     left:10px;
     font-size:25px;
     text-shadow: 0px 2px #000;
@@ -257,10 +257,10 @@ footer{
  div.overlap{
    pointer-event: none;
    position: absolute;
-   height:50px;
-   width:56px;
+   height:100%;
+   width:100%;
    box-shadow: 8px 7px 10px 4px rgba(0, 0, 0, 0.5) inset;
-   left: -8px;
+   left: 0px;
    position: absolute;
    top: 0px;
    border-radius: 50px;
@@ -2227,6 +2227,7 @@ top:10px;
        border: 1px solid rgba(0,0,0,0.3);
        margin-bottom: 23px;
        display:block;
+       text-align:left;
    img{
        border-right: 1px solid rgba(255,255,255,0.4);
    	box-shadow: -1px 0 0 0 rgba(0,0,0,0.2) inset;
@@ -2251,6 +2252,7 @@ top:10px;
    }
    div.membership{
    	margin:5px 0 20px 0;
+   	text-align:left;
       span{
        color: #FFFFFF;
        font-size: 24px;
